measurecompute/DAQ/C/cbw.h



/* Option Flags */
#define FOREGROUND       0x0000    /* Run in foreground, don't return till done */
#define BACKGROUND       0x0001    /* Run in background, return immediately */

#define SINGLEEXEC       0x0000    /* One execution */
#define CONTINUOUS       0x0002    /* Run continuously until cbstop() called */

#define TIMED            0x0000    /* Time conversions with internal clock */
#define EXTCLOCK         0x0004    /* Time conversions with external clock */

#define NOCONVERTDATA    0x0000    /* Return raw data */
#define CONVERTDATA      0x0008    /* Return converted A/D data */

#define NODTCONNECT      0x0000    /* Disable DT Connect */
#define DTCONNECT        0x0010    /* Enable DT Connect */
#define SCALEDATA        0x0010    /* Scale scan data to engineering units */

#define DEFAULTIO        0x0000    /* Use whatever makes sense for board */
#define SINGLEIO         0x0020    /* Interrupt per A/D conversion */
#define DMAIO            0x0040    /* DMA transfer */
#define BLOCKIO          0x0060    /* Interrupt per block of conversions */
#define BURSTIO         0x10000    /* Transfer upon scan completion */
#define RETRIGMODE      0x20000    /* Re-arm trigger upon acquiring trigger count samples */
#define NONSTREAMEDIO  0x040000    /* Non-streamed D/A output */
#define ADCCLOCKTRIG   0x080000    /* Output operation is triggered on ADC clock */
#define ADCCLOCK       0x100000    /* Output operation is paced by ADC clock */
#define HIGHRESRATE	   0x200000	   /* Use high resolution rate */
#define SHUNTCAL	   0x400000	   /* Enable Shunt Calibration */

#define BYTEXFER         0x0000    /* Digital IN/OUT a byte at a time */
#define WORDXFER         0x0100    /* Digital IN/OUT a word at a time */

#define INDIVIDUAL       0x0000    /* Individual D/A output */
#define SIMULTANEOUS     0x0200    /* Simultaneous D/A output */

#define FILTER           0x0000    /* Filter thermocouple inputs */
#define NOFILTER         0x0400    /* Disable filtering for thermocouple */

#define NORMMEMORY       0x0000    /* Return data to data array */
#define EXTMEMORY        0x0800    /* Send data to memory board ia DT-Connect */

#define BURSTMODE        0x1000    /* Enable burst mode */

#define NOTODINTS        0x2000    /* Disbale time-of-day interrupts */

#define EXTTRIGGER       0x4000     /* A/D is triggered externally */

#define NOCALIBRATEDATA  0x8000    /* Return uncalibrated PCM data */
#define CALIBRATEDATA    0x0000    /* Return calibrated PCM A/D data */

#define CTR16BIT		 0x0000	   /* Return 16-bit counter data */
#define CTR32BIT		 0x0100	   /* Return 32-bit counter data */
#define CTR48BIT		 0x0200	   /* Return 48-bit counter data */

/* Arguments that are used in a particular function call should be set
   to NOTUSED */
#define NOTUSED          -1


/* Types of digital I/O Ports */
#define AUXPORT          1

/* Types of board configuration information */
#define BIBASEADR           0       /* Base Address */
#define BIBOARDTYPE         1       /* Board Type (0x101 - 0x7FFF) */
#define BIINTLEVEL          2       /* Interrupt level */
#define BIDMACHAN           3       /* DMA channel */
#define BIINITIALIZED       4       /* TRUE or FALSE */
#define BICLOCK             5       /* Clock freq (1, 10 or bus) */
#define BIRANGE             6       /* Switch selectable range */
#define BINUMADCHANS        7       /* Number of A/D channels */
#define BIUSESEXPS          8       /* Supports expansion boards TRUE/FALSE */
#define BIDINUMDEVS         9       /* Number of digital devices */
#define BIDIDEVNUM          10      /* Index into digital information */
#define BICINUMDEVS         11      /* Number of counter devices */
#define BICIDEVNUM          12      /* Index into counter information */
#define BINUMDACHANS        13      /* Number of D/A channels */
#define BIWAITSTATE         14      /* Wait state enabled TRUE/FALSE */
#define BINUMIOPORTS        15      /* I/O address space used by board */
#define BIPARENTBOARD       16      /* Board number of parent board */
#define BIDTBOARD           17      /* Board number of connected DT board */
#define BINUMEXPS           18      /* Number of EXP boards installed */
#define BISERIALNUM          214    /* Serial Number for USB boards */
#define BIDACUPDATEMODE      215    /* Update immediately or upon AOUPDATE command */
#define BIDACUPDATECMD       216    /* Issue D/A UPDATE command */
#define BIDACSTARTUP         217    /* Store last value written for startup */ 
#define BIADTRIGCOUNT        219    /* Number of samples to acquire per trigger in retrigger mode */
#define BIADFIFOSIZE         220    /* Set FIFO override size for retrigger mode */
#define BIADSOURCE           221    /* Set source to internal reference or external connector(-1) */
#define BICALOUTPUT          222    /* CAL output pin setting */ 
#define BISRCADPACER         223    /* Source A/D Pacer output */
#define BIDIALARMMASK        230

#define BINETIOTIMEOUT       247

#define BIDIDEBOUNCESTATE    255    /* Digital inputs reset state */
#define BIDIDEBOUNCETIME     256      /* Digital inputs debounce Time */

#define BIPANID               258
#define BIRFCHANNEL           259

#define BIRSS                 261
#define BINODEID              262
#define BIDEVNOTES            263

#define BIADCSETTLETIME		  270

#define BIFACTORYID           272
#define BIHTTPPORT			  273
#define BIHIDELOGINDLG		  274
#define BIDACTRIGCOUNT		  284	/* Number of samples to generate per trigger in retrigger mode */


/* Type of digital device information */
#define DIBASEADR           0       /* Base address */
#define DIINITIALIZED       1       /* TRUE or FALSE */
#define DIDEVTYPE           2       /* AUXPORT or xPORTA - CH */
#define DIMASK              3       /* Bit mask for this port */
#define DIREADWRITE         4       /* Read required before write */
#define DICONFIG            5      /* Current configuration */
#define DINUMBITS           6      /* Number of bits in port */
#define DICURVAL            7      /* Current value of outputs */
#define DIINMASK            8      /* Input bit mask for port */
#define DIOUTMASK           9      /* Output bit mask for port */

/* Types of counter device information */
#define CIBASEADR           0       /* Base address */
#define CIINITIALIZED       1       /* TRUE or FALSE */
#define CICTRTYPE           2       /* Counter type 8254, 9513 or 8536 */
#define CICTRNUM            3       /* Which counter on chip */
#define CICONFIGBYTE        4       /* Configuration byte */

/* Types of expansion board information */
#define XIBOARDTYPE         0       /* Board type */
#define XIRANGE1            3       /* Range (gain) of low 16 chans */
#define XIRANGE2            4       /* Range (gain) of high 16 chans */
#define XICJCCHAN           5       /* TYPE_8254_CTR or TYPE_9513_CTR */
#define XITHERMTYPE         6       /* TYPEJ, TYPEK, TYPET, TYPEE, TYPER, or TYPES*/
#define XINUMEXPCHANS       7       /* Number of expansion channels on board*/
#define XIPARENTBOARD       8       /* Board number of parent A/D board*/
#define XISPARE0            9       /* 16 words of misc options */



/* Types of events */
#define	ON_SCAN_ERROR				0x0001
#define ON_EXTERNAL_INTERRUPT		0x0002
#define ON_PRETRIGGER				0x0004
#define ON_DATA_AVAILABLE			0x0008
#define ON_END_OF_AI_SCAN			0x0010
#define ON_END_OF_AO_SCAN			0x0020
#define ON_CHANGE_DI             0x0040
#define ALL_EVENT_TYPES          0xffff

/* ON_EXTERNAL_INTERRUPT event parameters*/
#define LATCH_DI			1
#define LATCH_DO			2


// time zone constants
#define TIMEZONE_LOCAL		0
#define TIMEZONE_GMT		1


// time format constants
#define TIMEFORMAT_12HOUR	0
#define TIMEFORMAT_24HOUR	1


// delimiter constants
#define DELIMITER_COMMA		0
#define DELIMITER_SEMICOLON	1
#define DELIMITER_SPACE		2
#define DELIMITER_TAB		3


// AI channel units in binary file
#define UNITS_TEMPERATURE	0
#define UNITS_RAW			1
  typedef unsigned short USHORT;


    int EXTCCONV cbACalibrateData (int BoardNum, long NumPoints, int Gain, 
                                   USHORT *ADData);

    int EXTCCONV cbLoadConfig(char *CfgFileName);

    int EXTCCONV cbSaveConfig(char *CfgFileName);

    int EXTCCONV cbAConvertData (int BoardNum, long NumPoints, USHORT *ADData, 
		                         USHORT *ChanTags);

    int EXTCCONV cbAConvertPretrigData (int BoardNum, long PreTrigCount, 
		                                long TotalCount, USHORT *ADData, 
										USHORT *ChanTags);

    int EXTCCONV cbAIn (int BoardNum, int Chan, int Gain, USHORT *DataValue);

    int EXTCCONV cbAIn32 (int BoardNum, int Chan, int Gain, ULONG *DataValue, int Options);

    int EXTCCONV cbAInScan (int BoardNum, int LowChan, int HighChan, long Count,
                            long *Rate, int Gain, HGLOBAL MemHandle, 
							int Options);

    int EXTCCONV cbALoadQueue (int BoardNum, short *ChanArray, short *GainArray, 
		                       int NumChans);

    int EXTCCONV cbAOut (int BoardNum, int Chan, int Gain, USHORT DataValue);

    int EXTCCONV cbAOutScan (int BoardNum, int LowChan, int HighChan, 
		                     long Count, long *Rate, int Gain, 
							 HGLOBAL MemHandle, int Options);

    int EXTCCONV cbAPretrig (int BoardNum, int LowChan, int HighChan,
                             long *PreTrigCount, long *TotalCount, long *Rate, 
							 int Gain, HGLOBAL MemHandle, int Options);

    int EXTCCONV cbATrig (int BoardNum, int Chan, int TrigType, 
		                  USHORT TrigValue, int Gain, USHORT *DataValue);

    int EXTCCONV cbC7266Config (int BoardNum, int CounterNum, int Quadrature,
                                int CountingMode, int DataEncoding, int IndexMode,
                                int InvertIndex, int FlagPins, int GateEnable);

    int EXTCCONV cbC8254Config (int BoardNum, int CounterNum, int Config);

    int EXTCCONV cbC8536Config (int BoardNum, int CounterNum, int OutputControl,
                                int RecycleMode, int TrigType);

    int EXTCCONV cbC9513Config (int BoardNum, int CounterNum, int GateControl,
                                int CounterEdge, int CountSource, 
								int SpecialGate, int Reload, int RecycleMode, 
								int BCDMode, int CountDirection, 
								int OutputControl);

    int EXTCCONV cbC8536Init (int BoardNum, int ChipNum, int Ctr1Output);

    int EXTCCONV cbC9513Init (int BoardNum, int ChipNum, int FOutDivider, 
		                      int FOutSource, int Compare1, int Compare2, 
							  int TimeOfDay);

    int EXTCCONV cbCFreqIn (int BoardNum, int SigSource, int GateInterval,
                            USHORT *Count, long *Freq);

    int EXTCCONV cbCIn (int BoardNum, int CounterNum, USHORT *Count);

    int EXTCCONV cbCStoreOnInt (int BoardNum, int IntCount, short *CntrControl,
                                HGLOBAL MemHandle);

	int EXTCCONV cbCInScan(int BoardNum, int FirstCtr,int LastCtr, LONG Count,
							LONG *Rate, HGLOBAL MemHandle, ULONG Options);

	int EXTCCONV cbCConfigScan(int BoardNum, int CounterNum, int Mode,int DebounceTime,
								int DebounceMode, int EdgeDetection,
								int TickSize, int MappedChannel);

    int EXTCCONV cbCClear (int BoardNum, int CounterNum);

    int EXTCCONV cbTimerOutStart (int BoardNum, int TimerNum, double *Frequency);

    int EXTCCONV cbTimerOutStop (int BoardNum, int TimerNum);

	int EXTCCONV cbPulseOutStart (int BoardNum, int TimerNum, double *Frequency, double *DutyCycle, unsigned int PulseCount, double *InitialDelay, int IdleState, int Options);

    int EXTCCONV cbPulseOutStop (int BoardNum, int TimerNum);