measurecompute/DAQ/VBWIN/CBW.BAS


' Types of board configuration information
Global Const BIBASEADR = 0         ' Base Address
Global Const BIBOARDTYPE = 1       ' Board Type (0x101 - 0x7FFF)
Global Const BIINTLEVEL = 2        ' Interrupt level
Global Const BIDMACHAN = 3         ' DMA channel
Global Const BIINITIALIZED = 4     ' TRUE or FALSE
Global Const BICLOCK = 5           ' Clock freq (1, 10 or bus)
Global Const BIRANGE = 6           ' Switch selectable range
Global Const BINUMADCHANS = 7      ' Number of A/D channels
Global Const BIUSESEXPS = 8        ' Supports expansion boards TRUE/FALSE
Global Const BIDINUMDEVS = 9       ' Number of digital devices
Global Const BIDIDEVNUM = 10       ' Index into digital information
Global Const BICINUMDEVS = 11      ' Number of counter devices
Global Const BICIDEVNUM = 12       ' Index into counter information
Global Const BINUMDACHANS = 13     ' Number of D/A channels
Global Const BIWAITSTATE = 14      ' Wait state enabled TRUE/FALSE
Global Const BINUMIOPORTS = 15     ' I/O address space used by board
Global Const BIPARENTBOARD = 16    ' Board number of parent board
Global Const BIDTBOARD = 17        ' Board number of connected DT board
Global Const BINUMEXPS = 18        ' Number of EXPs attached to board
Global Const BISERIALNUM = 214     ' Serial Number for USB boards
Global Const BIDACUPDATEMODE = 215 ' Update immediately or upon AOUPDATE command
Global Const BIDACUPDATECMD = 216  ' Issue D/A UPDATE command
Global Const BIDACSTARTUP = 217    ' Restore last value written for startup
Global Const BIADTRIGCOUNT = 219          ' Number of samples to acquire per trigger in retrigger mode
Global Const BIADFIFOSIZE = 220    ' Set FIFO override size for retrigger mode
Global Const BIADSOURCE = 221      ' Set A/D source to internal reference(>=0) or external connector(-1)
Global Const BICALOUTPUT = 222     ' CAL output pin setting
Global Const BISRCADPACER = 223     ' Source A/D Pacer output
Global Const BIDIALARMMASK = 230

Global Const BINETIOTIMEOUT = 247

Global Const BIDIDEBOUNCESTATE = 255
Global Const BIDIDEBOUNCETIME = 256 ' Digital inputs debounce Time

Global Const BIPANID = 258
Global Const BIRFCHANNEL = 259

Global Const BIRSS = 261
Global Const BINODEID = 262
Global Const BIDEVNOTES = 263

Global Const BIADCSETTLETIME = 270  ' Set settling time for A/D channels

Global Const BIFACTORYID = 272
Global Const BIHTTPPORT = 273
Global Const BIHIDELOGINDLG = 274
Global Const BIDACTRIGCOUNT = 284  ' Number of samples to generate per trigger in retrigger mode

' Types of digital device information
Global Const DIBASEADR = 0         ' Base address
Global Const DIINITIALIZED = 1     ' TRUE or FALSE
Global Const DIDEVTYPE = 2         ' AUXPORT or xPORTA - CH
Global Const DIMASK = 3            ' Bit mask for this port
Global Const DIREADWRITE = 4       ' Read required before write
Global Const DICONFIG = 5          ' Current configuration
Global Const DINUMBITS = 6         ' Number of bits in port
Global Const DICURVAL = 7          ' Current value of outputs
Global Const DIINMASK = 8                  ' Input bit mask for port
Global Const DIOUTMASK = 9                      ' Output bit mask for port

' Types of counter device information
Global Const CIBASEADR = 0         ' Base address
Global Const CIINITIALIZED = 1     ' TRUE or FALSE
Global Const CICTRTYPE = 2         ' Counter type 8254, 9513 or 8536
Global Const CICTRNUM = 3          ' Which counter on chip
Global Const CICONFIGBYTE = 4      ' Configuration byte

' Types of expansion board information
Global Const XIBOARDTYPE = 0       ' Expansion board type
Global Const XIMUXADCHAN1 = 1      ' 0 - 15
Global Const XIMUXADCHAN2 = 2      ' 0 - 15 or NOTUSED
Global Const XIRANGE1 = 3          ' Range (gain) of low 16 chans
Global Const XIRANGE2 = 4          ' Range (gain) of high 16 chans
Global Const XICJCCHAN = 5         ' 0 - 15 or NOTUSED
Global Const XITHERMTYPE = 6       ' TYPEJ, TYPEK, TYPEB, TYPET, TYPEE, TYPER, or TYPES
Global Const XINUMEXPCHANS = 7     ' Number of expansion channels on board
Global Const XIPARENTBOARD = 8     ' Board number of parent A/D board
Global Const XISPARE0 = 9          ' 16 words of misc options

' Types of Events
Global Const ON_SCAN_ERROR = &H1&
Global Const ON_EXTERNAL_INTERRUPT = &H2&
Global Const ON_PRETRIGGER = &H4&
Global Const ON_DATA_AVAILABLE = &H8&
Global Const ON_END_OF_AI_SCAN = &H10&
Global Const ON_END_OF_AO_SCAN = &H20&
Global Const ON_CHANGE_DI = &H40&
Global Const ALL_EVENT_TYPES = &HFF&

' ON_EXTERNAL_INTERRUPT event parameters
Global Const LATCH_DI = &H1&
Global Const LATCH_DO = &H2&


#If Win32 Then

' Option Flags
'
Global Const FOREGROUND = &H0&
Global Const BACKGROUND = &H1&

Global Const SINGLEEXEC = &H0&
Global Const CONTINUOUS = &H2&

Global Const TIMED = &H0&
Global Const EXTCLOCK = &H4&

Global Const NOCONVERTDATA = &H0&
Global Const CONVERTDATA = &H8&

Global Const NODTCONNECT = &H0&
Global Const DTCONNECT = &H10&
Global Const SCALEDATA = &H10&      ' Scale scan data to engineering units

Global Const DEFAULTIO = &H0&
Global Const SINGLEIO = &H20&
Global Const DMAIO = &H40&
Global Const BLOCKIO = &H60&
Global Const BURSTIO = &H10000     ' Transfer upon scan completion
Global Const RETRIGMODE = &H20000   ' Re-arm trigger upon acquiring trigger count samples
Global Const NONSTREAMEDIO = &H40000 ' Non-streamed D/A output
Global Const ADCCLOCKTRIG = &H80000
Global Const ADCCLOCK = &H100000
Global Const HIGHRESRATE = &H200000  ' Use high resolution rate
Global Const SHUNTCAL = &H400000     ' Enable Shunt Calibration


Global Const BYTEXFER = &H0&
Global Const WORDXFER = &H100&

Global Const INDIVIDUAL = &H0&
Global Const SIMULTANEOUS = &H200&

Global Const FILTER = &H0&
Global Const NOFILTER = &H400&

Global Const NORMMEMORY = &H0&
Global Const EXTMEMORY = &H800&

Global Const BURSTMODE = &H1000&

Global Const NOTODINTS = &H2000&

Global Const EXTTRIGGER = &H4000&

Global Const NOCALIBRATEDATA = &H8000&
Global Const CALIBRATEDATA = &H0&

Global Const CTR16BIT = &H0&    ' 16-bit counter data
Global Const CTR32BIT = &H100&  ' 32-bit counter data
Global Const CTR48BIT = &H200&  ' 48-bit counter data
 

' time zone constants
Global Const TIMEZONE_LOCAL = 0
Global Const TIMEZONE_GMT = 1


' time format constants
Global Const TIMEFORMAT_12HOUR = 0
Global Const TIMEFORMAT_24HOUR = 1


' delimiter constants
Global Const DELIMITER_COMMA = 0
Global Const DELIMITER_SEMICOLON = 1
Global Const DELIMITER_SPACE = 2
Global Const DELIMITER_TAB = 3


' Data Logger units constants
Global Const UNITS_TEMPERATURE = 0
Global Const UNITS_RAW = 1
       '
        ' 32-bit function prototypes
        '
Declare Function cbLoadConfig Lib "cbw32.dll" (ByVal CfgFileName$) As Long
Declare Function cbSaveConfig Lib "cbw32.dll" (ByVal CfgFileName$) As Long
Declare Function cbAConvertData Lib "cbw32.dll" (ByVal BoardNum&, ByVal NumPoints&, ADData%, ChanTags%) As Long
Declare Function cbACalibrateData Lib "cbw32.dll" (ByVal BoardNum&, ByVal NumPoints&, ByVal Gain&, ADData%) As Long
Declare Function cbAConvertPretrigData Lib "cbw32.dll" (ByVal BoardNum&, ByVal PretrigCount&, ByVal TotalCount&, ADData%, ChanTags%) As Long
Declare Function cbAIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal Gain&, DataValue%) As Long
Declare Function cbAIn32 Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal Gain&, DataValue&, ByVal Options&) As Long
Declare Function cbAInScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal LowChan&, ByVal HighChan&, ByVal CBCount&, CBRate&, ByVal Gain&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbALoadQueue Lib "cbw32.dll" (ByVal BoardNum&, ChanArray%, GainArray%, ByVal NumChans&) As Long
Declare Function cbAOut Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal Gain&, ByVal DataValue%) As Long
Declare Function cbAOutScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal LowChan&, ByVal HighChan&, ByVal CBCount&, CBRate&, ByVal Gain&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbAPretrig Lib "cbw32.dll" (ByVal BoardNum&, ByVal LowChan&, ByVal HighChan&, PretrigCount&, CBCount&, CBRate&, ByVal Gain&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbATrig Lib "cbw32.dll" (ByVal BoardNum&, ByVal Chan&, ByVal TrigType&, ByVal TrigValue%, ByVal Gain&, DataValue%) As Long
Declare Function cbC7266Config Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, ByVal Quadrature&, ByVal CountingMode&, ByVal DataEncoding&, ByVal IndexMode&, ByVal InvertIndex&, ByVal FlagPins&, ByVal GateEnable&) As Long
Declare Function cbC8254Config Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, ByVal Config&) As Long
Declare Function cbC8536Config Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, ByVal OutputControl&, ByVal RecycleMode&, ByVal TrigType&) As Long
Declare Function cbC9513Config Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, ByVal GateControl&, ByVal CounterEdge&, ByVal CountSource&, ByVal SpecialGate&, ByVal Reload&, ByVal RecycleMode&, ByVal BCDMode&, ByVal CountDirec&, ByVal OutputCtrl&) As Long
Declare Function cbC8536Init Lib "cbw32.dll" (ByVal BoardNum&, ByVal ChipNum&, ByVal Ctr1Output&) As Long
Declare Function cbC9513Init Lib "cbw32.dll" (ByVal BoardNum&, ByVal ChipNum&, ByVal FOutDivider&, ByVal FOutSource&, ByVal Compare1&, ByVal Compare2&, ByVal TimeOfDay&) As Long
Declare Function cbCStoreOnInt Lib "cbw32.dll" (ByVal BoardNum&, ByVal IntCount&, CntrControl%, ByVal DataBuffer&) As Long
Declare Function cbCFreqIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal SigSource&, ByVal GateInterval&, CBCount%, Freq&) As Long

Declare Function cbCInScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal FirstCtr&, ByVal LastCtr&, ByVal CBCount&, CBRate&, ByVal MemHandle&, ByVal Options&) As Long
Declare Function cbCConfigScan Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, ByVal Mode&, ByVal DebounceTime&, ByVal DebounceMode&, ByVal EdgeDetection&, ByVal TickSize&, ByVal MappedChannel&) As Long
Declare Function cbCClear Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&) As Long
Declare Function cbTimerOutStart Lib "cbw32.dll" (ByVal BoardNum&, ByVal TimerNum&, Frequency#) As Long
Declare Function cbTimerOutStop Lib "cbw32.dll" (ByVal BoardNum&, ByVal TimerNum&) As Long
Declare Function cbPulseOutStart Lib "cbw32.dll" (ByVal BoardNum&, ByVal TimerNum&, Frequency#, DutyCycle#, ByVal PulseCount&, InitialDelay#, ByVal IdleState&, ByVal Options&) As Long
Declare Function cbPulseOutStop Lib "cbw32.dll" (ByVal BoardNum&, ByVal TimerNum&) As Long

'*****************************************************************************
'   Legacy Function Prototypes: to revert to legacy calls, un-comment the
'          prototypes immediately below.
'
'      Declare Function cbCIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, CBCount&) As Long
'
'   Remove the following if using the above legacy function prototypes.
Declare Function cbCIn Lib "cbw32.dll" (ByVal BoardNum&, ByVal CounterNum&, CBCount%) As Long
'*****************************************************************************
